--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container header__flex">
            <div>
                 <a href="#">
-                    <img src="./img/logo.svg" alt="logo">
+                    <img src="./Img/logo.svg" alt="logo">
                 </a>
            </div>
            <nav class="nav">
@@ -65,14 +65,14 @@
             </div>
         </div>
         <div>
-            <img src="./img/firstman.png" alt="firstman">
+            <img src="./Img/firstman.png" alt="firstman">
         </div>
     </section>
     <footer class="header">
         <div class="container footer__flex">
             <div>
                 <a href="#">
-                    <img src="./img/logo.svg" alt="logo">
+                    <img src="./Img/logo.svg" alt="logo">
                 </a>
             </div>
             <nav class="nav">
